Motion sensor acces on iOS 13 devices

--- a/index.html
+++ b/index.html
@@ -152,8 +152,15 @@
 
 
 
-
-
+DeviceMotionEvent.requestPermission()
+.then(response => {
+  if (response == 'granted') {
+    window.addEventListener('devicemotion', (e) => {
+      // do something with e
+    })
+  }
+})
+.catch(console.error)
 
 
 
