--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     gamma:
     fps:
 </pre>
-
+ 
 
 <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.15.1/dist/tf.min.js"></script>
@@ -149,24 +149,41 @@
         output.innerHTML += "fps: " + 1000/fps + "\n";
 
     });
-
-
-
-DeviceMotionEvent.requestPermission()
-.then(response => {
-  if (response == 'granted') {
-    window.addEventListener('devicemotion', (e) => {
-      // do something with e
-    })
-  }
-})
-.catch(console.error)
-
-
-
-
-
 </script>
+
+    
+<button   id="request"  style="height: 200px; width: 200px; margin: 50px auto;">Request Permission</button>
+
+<script>
+if (location.protocol != 'https:') {
+ location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
+ }
+
+function requestT () {
+
+    if (typeof(DeviceMotionEvent) !== 'undefined' && typeof(DeviceMotionEvent.requestPermission) === 'function') {
+        alert('enter');
+        DeviceMotionEvent.requestPermission()
+        .then(response => {
+        alert('resp'+ response);
+          if (response == 'granted') {
+            window.addEventListener('devicemotion', (e) => {
+              // do something with e
+            })
+          }
+        })
+    .catch(console.error)
+    }else {
+        alert('DeviceMotionEvent is not defined');
+    }
+}
+document.getElementById('request').onclick = requestT;
+</script> 
+
+
+
+
+
 </body>
 </html>
 
