Device Orientation instead of Device Motion

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@ if (location.protocol != 'https:') {
 }
 
 function requestT () {
-    if (typeof(DeviceMotionEvent) !== 'undefined' && typeof(DeviceMotionEvent.requestPermission) === 'function') {
+    if (typeof(DeviceOrientationEvent) !== 'undefined' && typeof(DeviceOrientationEvent.requestPermission) === 'function') {
         alert('enter');
-        DeviceMotionEvent.requestPermission()
+        DeviceOrientationEvent.requestPermission()
         .then(response => {
         alert('resp'+ response);
           if (response == 'granted') {
@@ -38,7 +38,7 @@ function requestT () {
         })
     .catch(console.error)
     }else {
-        alert('DeviceMotionEvent is not defined');
+        alert('DeviceOrientationEvent is not defined');
     }
 }
 document.getElementById('request').onclick = requestT;
