--- a/qr_gen.html
+++ b/qr_gen.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>QR code generator</title>
-        <script src="https://github.com/davidshimjs/qrcodejs/blob/master/qrcode.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js%22%3E></script>
         <script type="text/javascript">
             function generateBarCode()
             {
