--- a/qr_gen.html
+++ b/qr_gen.html
@@ -5,7 +5,7 @@
         <script type="text/javascript">
             function generateBarCode()
             {
-                var nric = $('#text').val();
+                var nric = ('#text').val();
                 var url = 'https://api.qrserver.com/v1/create-qr-code/?data=' + nric + '&amp;size=50x50';
                 $('#barcode').attr('src', url);
             }
