--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+    body {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 20px;
+    }
 
+    #request {
+        display: true;
+        position: fixed;
+        top: 0px;
+        z-index: 99;
+        font-size: 18px;
+        border: none;
+        outline: none;
+        background-color: rgba(0, 0, 0, 0.1);
+        color: rgba(255,255, 255, 0.5);
+        cursor: pointer;
+        padding: 10px;
+        border-radius: 3px;
+    }
+    </style>
 </head>
-<body>
+
+<body onload="check()">
 <h1>
     Fourier transzformált giroszkóp adat
 </h1>
@@ -17,31 +39,9 @@
     fps:
 </pre>
 
-<button   id="request"  style="height: 200px; width: 200px; margin: 50px auto;">Request Permission</button>
+<button id="request" title="Tap Here">Tap Here to enable orientation tracking</button>
 
-<script>
-if (location.protocol != 'https:') {
-    location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
-}
 
-function requestT () {
-    if (typeof(DeviceMotionEvent) !== 'undefined' && typeof(DeviceMotionEvent.requestPermission) === 'function') {
-        DeviceMotionEvent.requestPermission()
-        .then(response => {
-        alert('access '+ response);
-          if (response === 'granted') {
-            window.addEventListener('devicemotion', (e) => {
-            // do something with e
-            });
-          }
-        })
-    .catch(console.error);
-    }else {
-        alert('DeviceMotionEvent is not defined');
-    }
-}
-document.getElementById('request').onclick = requestT;
-</script>
 
 <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.15.1/dist/tf.min.js"></script>
@@ -175,14 +175,66 @@ document.getElementById('request').onclick = requestT;
 
     });
 </script>
-
-
-
-
-
 </body>
+
+
+
+<script>
+function check() {
+    var match = (navigator.appVersion).match(/OS (\d+)_(\d+)_?(\d+)?/),
+        version;
+
+    if (match !== undefined && match !== null) {
+        version = [
+            parseInt(match[1], 10),
+            parseInt(match[2], 10),
+            parseInt(match[3] || 0, 10)
+        ];
+        ver=parseFloat(version.join('.'));
+	if (ver < 13) {
+            document.getElementById('request').style.visibility = 'hidden';
+        } else {
+            document.getElementById('request').style.visibility = 'visible';
+        }
+
+    }
+    else {
+	document.getElementById('request').style.visibility = 'hidden';
+	}
+}
+</script>
+
+
+
+<script>
+  if (location.protocol != 'https:') {
+   location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
+  }
+ 
+function requestT () {
+      if (typeof(DeviceMotionEvent) !== 'undefined' && typeof(DeviceMotionEvent.requestPermission) === 'function') {
+          
+          DeviceMotionEvent.requestPermission()
+          .then(response => {
+	alert('Orientation tracking '+ response);
+          
+            if (response == 'granted') {
+              window.addEventListener('devicemotion', (e) => {
+               document.getElementById('request').style.visibility='hidden';
+              })
+            }
+          })
+      .catch(console.error)
+      }else {
+          alert('DeviceMotionEvent is not defined');
+      }
+
+  }
+  document.getElementById('request').onclick = requestT;
+  </script>
+
+
+
 </html>
-
-
 
 
