--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         position: fixed;
         top: 0px;
         z-index: 99;
-        font-size: 18px;
+        font-size: 24px;
         border: none;
         outline: none;
-        background-color: rgba(0, 0, 0, 0.1);
-        color: rgba(255,255, 255, 0.5);
+        background-color: rgba(95, 167, 160, 0.5);
+        color: rgba(255, 255, 255, 0.8);
         cursor: pointer;
         padding: 10px;
         border-radius: 3px;
