--- a/index.html
+++ b/index.html
@@ -6,8 +6,28 @@
     <title>Title</title>
     <style>
     body {
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: Arial;
         font-size: 20px;
+    }
+
+    h1 { 
+  	display: block;
+  	font-size: 2em;
+  	margin-top: 2em;
+  	margin-bottom: 1em;
+  	margin-left: 0;
+  	margin-right: 0;
+  	font-weight: bold;
+    }
+    
+    h2 { 
+  	display: block;
+  	font-size: 1em;
+  	margin-top: 0.67em;
+  	margin-bottom: 0.67em;
+  	margin-left: 0;
+  	margin-right: 0;
+  	font-weight: bold;
     }
 
     #request {
@@ -31,7 +51,9 @@
 <h1>
     Fourier transzformált giroszkóp adat
 </h1>
-<a href="raw.html" class="button">Nyers adat</a>
+<h2>
+    <a href="raw.html" class="button">Nyers adat</a>
+</h2>
 <pre class="output">
     alpha:
     beta:
@@ -40,8 +62,6 @@
 </pre>
 
 <button id="request" title="Tap Here">Tap Here to enable orientation tracking</button>
-
-
 
 <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.15.1/dist/tf.min.js"></script>
