--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ function check() {
         ];
         ver=parseFloat(version.join('.'));
 	if (ver < 13) {
-            document.getElementById('request').style.visibility = 'hidden';
+            document.getElementById('request').style.visibility = 'visible';
         } else {
             document.getElementById('request').style.visibility = 'visible';
         }
