--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ function check() {
 
     }
     else {
-	document.getElementById('request').style.visibility = 'hidden';
+	document.getElementById('request').style.visibility = 'visible';
 	}
 }
 </script>
