--- a/index.html
+++ b/index.html
@@ -73,14 +73,17 @@
     var ii = 0;
     let permissionGranted = false
     let nonios13device = false
+    let cx, cy
     
     function setup() {
         createCanvas(512, 256);
         noFill();
-	
+	cx = width / 2
+ 	cy = height / 2
+	    
 	//Request sensor access on iOS 13 devices
-	if (typeof(DeviceOrientationEvent) !== 'undefined' && typeof(DeviceOrientationEvent.requestPermission) === 'function') {
-		DeviceOrientationEvent.requestPermission()
+	if (typeof(DeviceMotionEvent) !== 'undefined' && typeof(DeviceMotionEvent.requestPermission) === 'function') {
+		DeviceMotionEvent.requestPermission()
                 .catch(() => {
                 //Show permission dialog only the first time
         	let askButton = createButton("Allow acess to sensors")
@@ -102,7 +105,7 @@
 
     //Handle first time visiting to grant access
     function onAskButtonClicked() {
-    DeviceOrientationEvent.requestPermission().then(response => {
+    DeviceMotionEvent.requestPermission().then(response => {
     if (response === 'granted') {
       permissionGranted = true
     } else {
@@ -213,6 +216,17 @@
             plot2(ys, [0,200,100]);
             plot2(zs, [100, 0,200]);
             //let spectrum = fft.analyze();
+	    cx += map(rotationY, -90, 90, -100, 100)
+  	    cy += map(rotationX, -90, 90, -100, 100)
+  	    if (cx >= width) cx = 0
+            else if (cx <= 0) cx = width
+            if (cy >= height) cy = 0
+            else if (cy <= 0) cy = height
+
+            const pulse = sin(frameCount / 20) * 50
+            fill(sin(frameCount/60) * 30 + 30, 100, 100)
+            ellipse(cx, cy, 100 + abs(rotationX*20) + pulse, 100 + abs(rotationX*20) + pulse)
+
 
         }
         if (ii % 200 == 199){
