--- a/index.html
+++ b/index.html
@@ -29,25 +29,9 @@
   	margin-right: 0;
   	font-weight: bold;
     }
-
-    #request {
-        display: true;
-        position: fixed;
-        top: 0px;
-        z-index: 99;
-        font-size: 24px;
-        border: none;
-        outline: none;
-        background-color: rgba(95, 167, 160, 0.5);
-        color: rgba(255, 255, 255, 0.8);
-        cursor: pointer;
-        padding: 10px;
-        border-radius: 3px;
-    }
     </style>
 </head>
 
-<!--<body onload="check()">-->
 <body>
 <h1>
     Fourier transzformált giroszkóp adat
@@ -62,7 +46,7 @@
     fps:
 </pre>
 
-<!--<button id="request" title="Tap Here">Tap Here to enable orientation tracking</button>-->
+
 
 <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.15.1/dist/tf.min.js"></script>
@@ -114,14 +98,14 @@
     this.remove()
     }).catch(console.error)
     }
-	
+    
     window.addEventListener('devicemotion', function(event) {
         var output = document.querySelector('.output');
         //console.log(event.acceleration.x + ' m/s2');
         console.log(event.interval);
-        var x = event.rotationRate.alpha;  // In degree in the range [-180,180]
-        var y = event.rotationRate.beta;
-        var z = event.rotationRate.gamma;
+        var x = 2//event.rotationRate.alpha;  // In degree in the range [-180,180]
+        var y = 3//event.rotationRate.beta;
+        var z = -1//event.rotationRate.gamma;
         var fps = event.interval;
         xs.push(x);
         ys.push(y);
@@ -216,6 +200,7 @@
             plot2(ys, [0,200,100]);
             plot2(zs, [100, 0,200]);
             //let spectrum = fft.analyze();
+	    
 	    cx += map(rotationY, -90, 90, -100, 100)
   	    cy += map(rotationX, -90, 90, -100, 100)
   	    if (cx >= width) cx = 0
