--- a/index.html
+++ b/index.html
@@ -102,10 +102,12 @@
     window.addEventListener('devicemotion', function(event) {
         var output = document.querySelector('.output');
         //console.log(event.acceleration.x + ' m/s2');
+	//console.log(event.acceleration.y + ' m/s2');
+	//console.log(event.acceleration.z + ' m/s2');
         console.log(event.interval);
-        var x = 2//event.rotationRate.alpha;  // In degree in the range [-180,180]
-        var y = 3//event.rotationRate.beta;
-        var z = -1//event.rotationRate.gamma;
+        var x = event.acceleration.x//event.rotationRate.alpha;  // In degree in the range [-180,180]
+        var y = event.acceleration.y//event.rotationRate.beta;
+        var z = event.acceleration.z//event.rotationRate.gamma;
         var fps = event.interval;
         xs.push(x);
         ys.push(y);
