Checking device motion data in console

--- a/index.html
+++ b/index.html
@@ -101,16 +101,16 @@
 	console.log(rotationX);
 	console.log(rotationY);
 	console.log(rotationZ);
-	console.log(event.beta + ' deg');
-	console.log(event.gamma + ' deg');
-	console.log(event.alpha + ' deg');    
+	//console.log(event.beta + ' deg');
+	//console.log(event.gamma + ' deg');
+	//console.log(event.alpha + ' deg');    
 	
 	console.log(accelerationX);
 	console.log(accelerationY);
 	console.log(accelerationZ);
-        console.log(event.acceleration.x + ' m/s2');
-	console.log(event.acceleration.y + ' m/s2');
-	console.log(event.acceleration.z + ' m/s2');
+        //console.log(event.acceleration.x + ' m/s2');
+	//console.log(event.acceleration.y + ' m/s2');
+	//console.log(event.acceleration.z + ' m/s2');
 	    
 	console.log(event.rotationRate.alpha);
 	console.log(event.rotationRate.beta);
