--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 	console.log(accelerationX);
 	console.log(accelerationY);
 	console.log(accelerationZ);
+	console.log(event.acceleration);
         //console.log(event.acceleration.x + ' m/s2');
 	//console.log(event.acceleration.y + ' m/s2');
 	//console.log(event.acceleration.z + ' m/s2');
