--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ function check(form)//Check userid and pswd
  if(form.userid.value == "admin" && form.pswd.value == "admin")
   {
     window.open('fourier.html', '_self")/*opens the target page while Id & password matches*/
+    location.reload()
   }
  else
  {
