--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ function check(form)//Check userid and pswd
 {
  if(form.userid.value == "admin" && form.pswd.value == "admin")
   {
-    window.open('fourier.html', '_self")/*opens the target page while Id & password matches*/
-    location.reload()
+    window.open('fourier.html', '_self')/*opens the target page while Id & password matches*/
+    //location.reload()
   }
  else
  {
