--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Fourier</title>
+    <title>Login</title>
     <style>
     body {
         font-family: Arial;
@@ -40,7 +40,7 @@ function check(form)//Check userid and pswd
 {
  if(form.userid.value == "admin" && form.pswd.value == "admin")
   {
-    window.open('fourier.html', '_self')/*opens the target page while Id & password matches*/
+    window.open('www.google.com')/*opens the target page while Id & password matches*/
     //location.reload()
   }
  else
