--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@ function check(form)//Check userid and pswd
 {
  if(form.userid.value == "admin" && form.pswd.value == "admin")
   {
-    window.open('www.google.com')/*opens the target page while Id & password matches*/
-    //location.reload()
+    window.open('fourier.html')
   }
  else
  {
