Open main page self

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ function check(form)//Check userid and pswd
 {
  if(form.userid.value == "admin" && form.pswd.value == "admin")
   {
-    window.open('fourier.html')
+    window.open('fourier.html', '_self')
   }
  else
  {
