--- a/fft_psd.html
+++ b/fft_psd.html
@@ -77,8 +77,7 @@
     FFT
 </h1>
 <h2>
-    <a href="fourier.html" class="button">Fourier</a>
-    <a href="raw.html" class="button">Raw</a>
+    <a href="main.html" class="button">Main Page</a>
 </h2>
 <br>
 <select id="ddlViewBy">
