--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Main</title>
+    <title>Main Page</title>
     <style>
     body {
         font-family: Arial;
