--- a/fourier.html
+++ b/fourier.html
@@ -37,7 +37,7 @@
     Fourier
 </h1>
 <h2>
-    <a href="raw.html" class="button">Raw</a>
+    <a href="main.html" class="button">Main Page</a>
 </h2>
 <pre class="output">
     alpha:
