--- a/raw.html
+++ b/raw.html
@@ -37,7 +37,7 @@
     Raw
 </h1>
 <h2>
-    <a href="fourier.html" class="button">Fourier</a>
+    <a href="main.html" class="button">Main Page</a>
 </h2>
 <pre class="output">
     alpha:
