--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>Main Page</title>
     <style>
@@ -17,7 +18,7 @@
   	     margin-top: 1.5em;
   	     margin-bottom: 1em;
   	     margin-left: 0;
-        margin-right: 0;
+         margin-right: 0;
   	     font-weight: bold;
     }
     </style>
@@ -29,7 +30,9 @@ Main Page
 </h1>
 <h2>
     <a href="raw.html" class="button">Raw</a>
+    <br>
     <a href="fourier.html" class="button">Fourier</a>
+    <br>
     <a href="fft_psd.html" class="button">FFT</a>
 </h2>
 </body>
