--- a/raw.html
+++ b/raw.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>Fourier</title>
+    <title>Raw</title>
     <style>
     body {
         font-family: Arial;
