--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Login Page
 Username &nbsp;
 <input type="text" name="userid"/>
 <br>
-Password &nbsp; &nbsp;
+Password &nbsp;
 <input type="password" name="pswd"/>
 <br>
 <input type="button" onclick="check(this.form)" value="Login"/>
