--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ Login Page
 </h1>
  
 <form name="login">
-Username<input type="text" name="userid"/>
+Username&nbsp;<input type="text" name="userid"/>
 <br>
-Password <input type="password" name="pswd"/>
+Password &nbsp;<input type="password" name="pswd"/>
 <br>
 <input type="button" onclick="check(this.form)" value="Login"/>
 <input type="reset" value="Cancel"/>
