--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@ Login Page
 </h1>
  
 <form name="login">
+<table>
+  <tr>
+    <td>a</td>
+    <td>b</td> 
+  </tr>
+  <tr>
+    <td>c</td>
+    <td>d</td>
+  </tr>
+</table>
 Username&nbsp;<input type="text" name="userid"/>
 <br>
 Password &nbsp;<input type="password" name="pswd"/>
