--- a/index.html
+++ b/index.html
@@ -32,17 +32,14 @@ Login Page
 <form name="login">
 <table>
   <tr>
-    <td>a</td>
-    <td>b</td> 
+    <td>Username</td>
+    <td><input type="text" name="userid"/></td> 
   </tr>
   <tr>
-    <td>c</td>
-    <td>d</td>
+    <td>Password</td>
+    <td><input type="password" name="pswd"/></td>
   </tr>
 </table>
-Username&nbsp;<input type="text" name="userid"/>
-<br>
-Password &nbsp;<input type="password" name="pswd"/>
 <br>
 <input type="button" onclick="check(this.form)" value="Login"/>
 <input type="reset" value="Cancel"/>
