--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
   	     margin-top: 1.5em;
   	     margin-bottom: 1em;
   	     margin-left: 0;
-         margin-right: 0;
+             margin-right: 0;
   	     font-weight: bold;
     }
     
@@ -48,17 +48,14 @@
 
 
 
-//<script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
 <script>
         function setup() {
-        createCanvas(512, 256);
-        noFill();
-	
 	    //Request sensor access on iOS 13 devices
 	    if (typeof(DeviceMotionEvent) !== 'undefined' && typeof(DeviceMotionEvent.requestPermission) === 'function') {
-		        DeviceMotionEvent.requestPermission()
-                .catch(() => {
-                //Show permission dialog only the first time
+		    DeviceMotionEvent.requestPermission()
+                    .catch(() => {
+                    //Show permission dialog only the first time
         	    let askButton = createButton("Allow acess to sensors")
         	    askButton.style("font-size", "24px")
         	    askButton.position(0, 0)
@@ -66,14 +63,14 @@
         	    throw error
       	 })
       	.then(() => {
-	    //This runs on subsequent visits
+	//This runs on subsequent visits
         permissionGranted = true
       	})
   	    } else {
     	text("non ios 13 devices", 50, 50)
     	nonios13device = true
     	permissionGranted = true
-  	    }
+  	}
     }
 
     //Handle first time visiting to grant access
