--- a/fourier.html
+++ b/fourier.html
@@ -40,6 +40,9 @@
 <h2>
     <a href="main.html" class="button">Main Page</a>
 </h2>
+<input type="button" id="toggle" value="Wake Lock disabled" />
+<br>
+<br>
 <pre class="output">
     alpha:
     beta:
@@ -51,54 +54,39 @@
 
 <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.15.1/dist/tf.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/nosleep/0.6.0/NoSleep.min.js"></script>
 <script>
     var xs = [0];
     var ys = [0];
     var zs = [0];
     var ii = 0;
-    let permissionGranted = false
-    let nonios13device = false
     
     function setup() {
         createCanvas(512, 256);
         noFill();
-	
-	//Request sensor access on iOS 13 devices
-	if (typeof(DeviceMotionEvent) !== 'undefined' && typeof(DeviceMotionEvent.requestPermission) === 'function') {
-		DeviceMotionEvent.requestPermission()
-                .catch(() => {
-                //Show permission dialog only the first time
-        	let askButton = createButton("Allow acess to sensors")
-        	askButton.style("font-size", "24px")
-        	askButton.position(0, 0)
-        	askButton.mousePressed(onAskButtonClicked)
-        	throw error
-      	})
-      	.then(() => {
-	//This runs on subsequent visits
-        permissionGranted = true
-      	})
-  	} else {
-    	text("non ios 13 devices", 50, 50)
-    	nonios13device = true
-    	permissionGranted = true
-  	}
-    }
-
-    //Handle first time visiting to grant access
-    function onAskButtonClicked() {
-    DeviceMotionEvent.requestPermission().then(response => {
-    if (response === 'granted') {
-      permissionGranted = true
-    } else {
-      permissionGranted = false
-    }
-    this.remove()
-    }).catch(console.error)
     }
     
-    //Motion event
+    //Motion event + no sleep
     window.addEventListener('devicemotion', function(event) {
+	//No sleep
+	var noSleep = new NoSleep();
+        var wakeLockEnabled = false;
+        var toggleEl = document.querySelector("#toggle");
+        toggleEl.addEventListener('click', function() {
+            if (!wakeLockEnabled) {
+                noSleep.enable(); //Keep the screen on
+                wakeLockEnabled = true;
+                toggleEl.value = "Wake Lock enabled";
+                document.body.style.backgroundColor = "gray";
+            } else {
+                noSleep.disable(); //Let the screen turn off
+                wakeLockEnabled = false;
+                toggleEl.value = "Wake Lock disabled";
+                document.body.style.backgroundColor = "";
+            }
+        }, false);
+	
+	//Motion
         var output = document.querySelector('.output');
 	console.log(rotationX);
 	console.log(rotationY);
